FEC-4489 #time 1h #comment make sure smart container buttons are off screen when info screen opens

--- a/modules/KalturaSupport/components/info/info.css
+++ b/modules/KalturaSupport/components/info/info.css
@@ -35,6 +35,8 @@
 }
 .infoScreen .info-close{
     width: 100%;
+    font-size: 1.2em;
+    font-weight: bold;
     text-align: right;
     cursor: pointer;
     -webkit-tap-highlight-color: rgba(0,0,0,0);
