--- a/skins/kdark/css/layout.css
+++ b/skins/kdark/css/layout.css
@@ -38,7 +38,7 @@ body {
 	padding-right: 5px;
 }
 .topBarContainer.hover {
-	top: -2.8em;
+	top: -3.6em;
 }
 .topBarContainer.open {
 	top: 0;
